--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.4.2",
+    "vue-multiselect": "^2.0.8",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
