--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.4",
     "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.4.2",
+    "vue-autosuggest": "^1.3.1",
     "vue-multiselect": "^2.0.8",
     "vue-router": "^2.7.0"
   },
