--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.4.2",
     "vue-autosuggest": "^1.3.1",
     "vue-multiselect": "^2.0.8",
+    "vue-notification": "^1.3.7",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
