--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-autosuggest": "^1.3.1",
     "vue-multiselect": "^2.0.8",
     "vue-notification": "^1.3.7",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuejs-datepicker": "^0.9.29"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
