--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "handsontable": "^0.35.0",
     "lodash": "^4.17.4",
-    "vee-validate": "^2.0.0-rc.19",
+    "vee-validate": "^2.0.6",
     "vue": "^2.4.2",
     "vue-autosuggest": "^1.3.1",
     "vue-multiselect": "^2.0.8",
