--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-multiselect": "^2.0.8",
     "vue-notification": "^1.3.7",
     "vue-router": "^2.7.0",
+    "vuedals": "^1.7.0",
     "vuejs-datepicker": "^0.9.29"
   },
   "devDependencies": {
